dsl2/src/test/resources/parsing/invalid/bad_syntax/unknown_variable.uss
int a = i_do_not_exist + 1;